--- a/quiz.css
+++ b/quiz.css
@@ -99,7 +99,7 @@
 h1 {
     font-size: 30px;
     font-weight: bold;
-    margin-bottom: 0;
+    margin-bottom: 20px;
     text-align: center;
 }
 p{
